Add multiple tabs and URLs

--- a/display/config.json
+++ b/display/config.json
@@ -1,3 +1,6 @@
 {
-    "url": "https://omatnaytot.hsl.fi/view?cont=c2-Rw-FCiZxVETu42fEDYA=="
+    "urls": [
+        "https://omatnaytot.hsl.fi/view?cont=c2-Rw-FCiZxVETu42fEDYA==",
+        "https://livestream.com/accounts/4931571/events/5369913/player?autoPlay=true&mute=true"
+    ]
 }
