Add events calendar to URLs

--- a/display/config.json
+++ b/display/config.json
@@ -9,6 +9,10 @@
             "duration":15
         },
         {
+            "url":"https://integralis.fi/calendar",
+            "duration":15
+        },
+        {
             "url":"https://livestream.com/accounts/4931571/events/5369913/player?autoPlay=true&mute=true",
             "duration":5
         },
