--- a/display/config.json
+++ b/display/config.json
@@ -10,6 +10,10 @@
             "duration":2
         },
         {
+            "url":"https://integralis.fi/events",
+            "duration":30
+        },
+        {
             "url":"https://integralis.fi/calendar",
             "duration":135
         },
