--- a/display/config.json
+++ b/display/config.json
@@ -13,7 +13,7 @@
             "duration":35
         },
         {
-            "url":"https://livestream.com/accounts/4931571/events/5369913/player?autoPlay=true&mute=true",
+            "url":"https://meow.camera",
             "duration":15
         },
         {
