Update URL in config.json for Integralis

--- a/display/config.json
+++ b/display/config.json
@@ -9,7 +9,7 @@
             "duration":5
         },
         {
-            "url":"https://integralis.fi/calendar",
+            "url":"https://integralis.fi/events",
             "duration":5
         },
         {
